kubernetes/jellyfin/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  host: jellyfin.apps.okd.<path:secret/data/gitlab/domain#url>
  to:
    kind: Service
    name: jellyfin
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
